--- a/src/version.cpp.in
+++ b/src/version.cpp.in
@@ -1,4 +1,4 @@
-#define DEF_LOKI_VERSION_MAJOR 2
+#define DEF_LOKI_VERSION_MAJOR 1
 #define DEF_LOKI_VERSION_MINOR 0
 #define DEF_LOKI_VERSION_PATCH 0
 
@@ -7,7 +7,7 @@
 #define DEF_LOKI_VERSION LOKI_STRINGIFY(DEF_LOKI_VERSION_MAJOR) "." LOKI_STRINGIFY(DEF_LOKI_VERSION_MINOR) "." LOKI_STRINGIFY(DEF_LOKI_VERSION_PATCH) "-rc"
 
 #define DEF_LOKI_VERSION_TAG "@VERSIONTAG@"
-#define DEF_LOKI_RELEASE_NAME "Festive Freya"
+#define DEF_LOKI_RELEASE_NAME "Dawn"
 #define DEF_LOKI_VERSION_FULL DEF_LOKI_VERSION "-" DEF_LOKI_VERSION_TAG
 
 #include "version.h"
