--- a/contrib/gitian/gitian-linux.yml
+++ b/contrib/gitian/gitian-linux.yml
@@ -43,7 +43,7 @@ packages:
 - "libprotobuf-dev"
 - "python3-zmq"
 remotes:
-- "url": "https://github.com/loki-project/loki.git"
+- "url": "https://https://gitlab.com/Sevabit/SevaBit.git"
   "dir": "loki"
 files: []
 script: |
