--- a/contrib/gitian/gitian-osx.yml
+++ b/contrib/gitian/gitian-osx.yml
@@ -28,7 +28,7 @@ packages:
 - "python-setuptools"
 - "fonts-tuffy"
 remotes:
-- "url": "https://github.com/loki-project/loki.git"
+- "url": "https://https://gitlab.com/Sevabit/SevaBit.git"
   "dir": "loki"
 files:
 - "MacOSX10.11.sdk.tar.gz"
